data/derived/comb/progs/unify/prog0986.ml.out
Characters 29-51:
  wwhile ((failwith "asd", true),b);;
          ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
